# ADSC32

./: .gitignore  README.md  app.py  main.py  model.py  pyproject.toml
notebooks/: 01_GetData.ipynb  02_CleanData.ipynb
