[project]
name = "adsc32"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "folium>=0.20.0",
    "matplotlib>=3.10.8",
    "mesa>=3.3.1",
    "owslib>=0.35.0",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "pyproj>=3.7.2",
    "requests>=2.32.5",
]
